# Monobuck

./: .gitignore  README.md  README2.md  README2_EN.md  README_CN.md  package-lock.json  package.json
docs/: ACHIEVEMENTS.md  ASR_WORKFLOW.md  DESIGN_GUIDE.md  README.md
mono_core/: build_websocket_server.py  main.py  pyproject.toml  websocket_server.py  websocket_server.spec
mono_core/RealtimeSTT/: audio_input.py  audio_recorder.py  state_machine.py  test.py  test_pipe.py  test_pipe2.py  transcriber_client.py  transcription_worker.py  utils.py  vad.py  wakeword.py
mono_core/core/: asr_service backup.py  asr_service.py  base_ai_service.py  config.json  config.py  service_runtime.py  test.py  text_service.py
mono_core/core/utils/: frontend.py
mono_core/doc/: fun-asr-realtime.md  text_generation.md
mono_core/examples/: demo_file_mode.py  demo_microphone_direct.py  demo_stream_finalize.py  offical_demo_asr.py  offical_demo_local_asr.py  run_mic_stream.py  run_pipeline.py
mono_core/tests/: test_asr_strategy_switch.py  test_persistence_session.py  test_stream_persistence.py
src/: api.js  hotkeys.js  index.html  main.js  recognition.js  recording_status.html  styles.css  toast.html  toast.js  websocket.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_stream.rs  hotkey.rs  injection.rs  lib.rs  main.rs  session.rs  stats.rs  websocket.rs
src/components/: achievement-badge.html  achievement-system.js  dropdown.js  settings-modal.html  settings-modal.js  settings-select.js  spinner.html  streak.js  ui-dialog.js
src/views/: account.html  achievements.html  dictionary.html  help.html  home.html  instructions.html  settings.html  transcripts.html
