[project]
name = "mono-core"
version = "0.1.0"
description = "Unified speech-to-text and text refinement pipeline (ASR + LLM)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"dashscope>=1.19.0",
	"funasr>=1.2.7",
	"pyaudio>=0.2.14",
	"pynput>=1.7.0",
	"numpy>=1.24.0",
	"sounddevice>=0.4.6",
	"modelscope",
	"fastapi>=0.110.0",
	"uvicorn[standard]>=0.29.0",
	"python-multipart>=0.0.20",
	"websockets==12.0",
	"python-dotenv==1.0.0",
	"funasr-onnx>=0.4.1",
	"halo>=0.0.31",
	"jieba>=0.42.1",
	"onnxscript>=0.5.0",
	"openwakeword>=0.6.0",
	"psutil>=7.1.3",
	"pvporcupine>=4.0.0",
	"scipy>=1.15.3",
	"silero-vad>=6.2.0",
	"soundfile>=0.13.1",
	"torch>=2.9.1",
	"torchaudio>=2.9.1",
	"webrtcvad-wheels>=2.0.14",
	"pyinstaller==6.6.0",
]
[[tool.uv.index]]
url="https://pypi.tuna.tsinghua.edu.cn/simple"
default=true

[tool.mono-core]
# 预留项目自定义配置命名空间（无实际逻辑，仅示例）
enable-local-asr = false
enable-local-llm = false
