[package]
name = "monobuck"
version = "0.1.0"
description = "A Tauri App"
authors = ["hjs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "monobuck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
ureq = { version = "2.9", features = ["json"] }
cpal = "0.16.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.28.0"
base64 = "0.22.1"
futures = "0.3.31"
hound = "3.5"
chrono = { version = "0.4", features = ["serde"] }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Globalization",
	"Win32_Foundation"
] }
